alignment text solved

--- a/src/css/coinBalanceCard.css
+++ b/src/css/coinBalanceCard.css
@@ -277,6 +277,7 @@
 
 .coinBalanceDiv {
   display: flex;
+  align-items: baseline;
 }
 
 .rupee {
