--- a/src/css/redeemPopup.css
+++ b/src/css/redeemPopup.css
@@ -84,17 +84,16 @@
   box-sizing: border-box;
   box-shadow: 0px 4px 10px #a6cad1;
   border-radius: 5px;
-  /* height: 4.0625rem; */
   width: 100%;
   font-style: normal;
   font-weight: 500;
   font-size: 24px;
-  height: 30px;
+  height: 44px;
   line-height: 1.75rem;
   text-align: center;
   color: #ffffff;
   margin-top: 32px;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   cursor: pointer;
 }
 .modalContainer {
